<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="cursive"
        android:textColor="#111212"
        android:text="@string/select_month_and_year" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/newyorktimesogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:padding="5dp"
        android:text="@string/the_selected_day_is_not_important_only_the_year_and_month_are_important" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/i_do_not_own_the_copyrights_to_any_materials_presented_in_app" />

</LinearLayout>